--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,3 +10,8 @@ tasks:
     - name: install_pgadmin
       before: |
         docker run -it -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" -e PGADMIN_DEFAULT_PASSWORD="root" -p 8080:80 --network=pg-network --name pgadmin dpage/pgadmin4 
+
+ports:
+  - name: Pgadmin
+  - port: 8080
+    protocol: https
