--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,7 +9,8 @@ tasks:
           --name pg_database postgres:13
     - name: install_pgadmin
       before: |
-        docker run -it -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" -e PGADMIN_DEFAULT_PASSWORD="root" -p 80:80 --network=pg-network --name pgadmin dpage/pgadmin4 
+        docker volume create --name=dtc_pgadmin_volume_local -d local
+        docker run -it -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" -e PGADMIN_DEFAULT_PASSWORD="root" -v dtc_pgadmin_volume_local:/var/lib/pgadmin -p 80:80 --network=pg-network --name pgadmin dpage/pgadmin4 
 
 ports:
   - name: Pgadmin
