--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,6 @@ tasks:
       before: |
         docker volume create --name=dtc_pgadmin_volume_local -d local
         docker run -it -e PGADMIN_DEFAULT_EMAIL="admin@admin.com" -e PGADMIN_DEFAULT_PASSWORD="root" \
-         -v dtc_pgadmin_volume_local:/var/lib/pgadmin -p 5050:5050 \
+         -v dtc_pgadmin_volume_local:/var/lib/pgadmin -p 5050:5050/tcp \
          --network=pg-network --name pgadmin dpage/pgadmin4 \
-         - PGADMIN_LISTEN_PORT=5050
+         -e PGADMIN_LISTEN_PORT=5050
