adding postgres folder to workspace

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
           docker network create pg-network
           docker volume create --name=dtc_postgres_volume_local -d local
           docker run -it -e POSTGRES_USER="root" -e POSTGRES_PASSWORD="root" -e POSTGRES_DB="ny_taxi" \
-          -v dtc_postgres_volume_local:/var/lib/postgresql/data \
+          -v ./nyc_postgres_data:/var/lib/postgresql/data \
           -p 5432:5432 --network=pg-network \
           --name pg_database postgres:13
     - name: install_pgadmin
